--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="cell">Supprimer</div>
             </div>
             <div class="row">
-                <div class="cell id">1</div>
+                <div class="cell id">#1</div>
                 <div class="cell">Doe</div>
                 <div class="cell">Jhon</div>
                 <div class="cell">jhon_doe@contact.fr</div>
@@ -28,13 +28,23 @@
                 <div class="cell delete">Delete</div>
             </div>
             <div class="row">
-                <div class="cell id">2</div>
+                <div class="cell id">#2</div>
                 <div class="cell">Doe</div>
                 <div class="cell">Jhon</div>
                 <div class="cell">jhon_doe@contact.fr</div>
                 <div class="cell edit">Edit</div>
                 <div class="cell delete">Delete</div>
             </div>
+        </div>
+        <div class="show__add__form">ADD USER</div>
+        <div class="div__form">
+            <form action="#" class="add__user__form">
+                <h1>Ajouter un utilisateur</h1>
+                <input type="text" placeholder="First name" name="first_name">
+                <input type="text" placeholder="Last name" name="last_name">
+                <input type="email" placeholder="Email" name="email">
+                <button type="submit">Soumettre</button>
+            </form>
         </div>
     </div>
 
