creation de la div user_info, ajout des required

--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
                 <div class="cell">Modifier</div>
                 <div class="cell">Supprimer</div>
             </div>
+            <div class="user_info"></div>
         </div>
         <div class="show__add__form">ADD USER</div>
         <div class="div__form">
-            <form action="#" class="add__user__form">
+            <form class="add__user__form">
                 <h1>Ajouter un utilisateur</h1>
-                <input type="text" placeholder="First name" name="first_name">
-                <input type="text" placeholder="Last name" name="last_name">
-                <input type="email" placeholder="Email" name="email">
+                <input type="text" placeholder="First name" name="first_name" required>
+                <input type="text" placeholder="Last name" name="last_name" required>
+                <input type="email" placeholder="Email" name="email" required>
                 <button type="submit">Soumettre</button>
             </form>
         </div>
